kubeclient/_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeclient
  namespace: skkim-01
spec:
  selector:
    app: kubeclient
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9999
      targetPort: 9999
